<resources>
    <string name="app_name">Play IO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="home_seller_text">Find your best music.</string>
    <string name="trending">Trending</string>
    <string name="view_more">View More</string>
    <string name="top_artists">Top Artists</string>
    <string name="top_genre">Top Genre</string>
    <string name="profile_picture">profile picture</string>
    <string name="top_albums">Top Albums</string>
    <string name="no_internet_message">Your device is not connected to the internet, turn on your data or connect to a secure wifi network to continue streaming more indie music.</string>
    <string name="no_results">Sorry, we couldn\'t find any results at this time</string>
    <string name="error_image">Error Image</string>
    <string name="track_art">Track Art</string>
    <string name="play_button">Play Button</string>
    <string name="artist_picture">Artist Picture</string>
    <string name="album_art">Album Art</string>
    <string name="top_40_tracks_art">Top 40 tracks art</string>
    <string name="top_40_track_art">Top 40 track art</string>
    <string name="home_bottom_navigation_button">Home bottom navigation button</string>
    <string name="albums_bottom_navigation_button">Albums bottom navigation button</string>
    <string name="artists_bottom_navigation_button">Artists bottom navigation button</string>
    <string name="tracks_bottom_navigation_button">Tracks bottom navigation button</string>
    <string name="player_error_message">An error occurred while trying to stream your music.</string>
    <string name="shuffle">Shuffle</string>
    <string name="previous">Previous</string>
    <string name="play_pause">Play/Pause</string>
    <string name="next">Next</string>
    <string name="repeat">Repeat</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
</resources>