<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="isLoading"
            type="boolean" />

        <variable
            name="isError"
            type="boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Fragments.HomeFragment">

        <LinearLayout
            android:id="@+id/error_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            app:visibility="@{isError &amp;&amp; !isLoading}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/error_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/error_image" />

            <TextView
                android:id="@+id/error_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="40dp"
                android:gravity="center"
                android:text="@string/no_results"
                style="@style/HeaderTextView"/>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:visibility="@{!isError &amp;&amp; isLoading}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scrollbars="none"
            app:visibility="@{!isError &amp;&amp; !isLoading}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_top_margin"
                android:layout_marginStart="@dimen/standard_top_margin"
                android:layout_marginEnd="@dimen/standard_top_margin">

                <TextView
                    android:id="@+id/welcome_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    style="@style/WelcomeTextView"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/home_seller_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/standard_top_margin"
                    android:layout_marginEnd="50dp"
                    android:textStyle="bold"
                    android:text="@string/home_seller_text"
                    style="@style/HomeSellerTextView"
                    app:layout_constraintTop_toBottomOf="@id/welcome_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/profile_picture_clipper"/>


                <LinearLayout
                    android:id="@+id/profile_picture_clipper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/standard_top_margin"
                    android:background="@drawable/profile_picture_background"
                    app:layout_constraintTop_toBottomOf="@id/welcome_text"
                    app:layout_constraintStart_toEndOf="@id/home_seller_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:clipToOutline="@{true}">

                    <ImageView
                        android:id="@+id/profile_picture"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="?defaultColorSecondary"
                        android:contentDescription="@string/profile_picture" />
                </LinearLayout>

                <TextView
                    android:id="@+id/trending_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/home_section_margins"
                    android:text="@string/trending"
                    style="@style/HeaderTextView"
                    app:layout_constraintTop_toBottomOf="@id/home_seller_text"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/view_tracks"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/home_section_margins"
                    android:text="@string/view_more"
                    style="@style/ViewMoreTextView"
                    app:layout_constraintTop_toBottomOf="@id/home_seller_text"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/tracks_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/home_recycler_view_top_margin"
                    app:layout_constraintTop_toBottomOf="@id/trending_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/top_artists"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/home_section_margins"
                    android:text="@string/top_artists"
                    style="@style/HeaderTextView"
                    app:layout_constraintTop_toBottomOf="@id/tracks_list"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/view_artists"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/home_section_margins"
                    android:text="@string/view_more"
                    style="@style/ViewMoreTextView"
                    app:layout_constraintTop_toBottomOf="@id/tracks_list"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/artists_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/home_recycler_view_top_margin"
                    app:layout_constraintTop_toBottomOf="@id/top_artists"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/top_albums"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/home_section_margins"
                    android:text="@string/top_albums"
                    style="@style/HeaderTextView"
                    app:layout_constraintTop_toBottomOf="@id/artists_list"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/view_albums"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/home_section_margins"
                    android:text="@string/view_more"
                    style="@style/ViewMoreTextView"
                    app:layout_constraintTop_toBottomOf="@id/artists_list"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/albums_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/home_recycler_view_top_margin"
                    app:layout_constraintTop_toBottomOf="@id/top_albums"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>