<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.PlayActivity">

<!--    <include-->
<!--        android:id="@+id/toolbar"-->
<!--        layout="@layout/welcome_toolbar"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/audio_file_thumbnail_background"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/track_art"/>

            <ImageView
                android:id="@+id/audio_file_thumbnail"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerInParent="true"
                android:src="@drawable/placeholdericon"
                android:contentDescription="@string/track_art"/>

            <ProgressBar
                android:id="@+id/loading_progress_bar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"/>

            <TextView
                android:id="@+id/error_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/audio_file_thumbnail"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:gravity="center"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/player_error_message"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="19sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text=""/>

        <TextView
            android:id="@+id/author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text=""/>

        <SeekBar
            android:id="@+id/play_back_seekbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:progress="0"/>

        <LinearLayout
            android:id="@+id/timers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/current_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="2dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text=""/>

            <TextView
                android:id="@+id/total_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="2dp"
                android:gravity="end"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:text=""/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/play_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="5"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/shuffle"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/placeholdericon"
                    android:contentDescription="@string/shuffle"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/previous"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/placeholdericon"
                    android:contentDescription="@string/previous"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/play_pause"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/placeholdericon"
                    android:contentDescription="@string/play_pause"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/next"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/placeholdericon"
                    android:contentDescription="@string/next"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/repeat"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/placeholdericon"
                    android:contentDescription="@string/repeat"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>